--- a/Renewable_Energy_Analysis.ipynb
+++ b/Renewable_Energy_Analysis.ipynb
@@ -42,9 +42,34 @@
    "metadata": {},
    "source": [
     "# Table of Contents\n",
-    "[Business Problem](#test)\n",
+    "1. [Business Problem](#test)\n",
     "\n",
-    "[Data Source](#datasource)\n"
+    "2. [Data Source](#datasource)\n",
+    "\n",
+    "3. [Dataset Summary](#summary)\n",
+    "\n",
+    "4. [Importing necessary Libraries](#libraries)\n",
+    "\n",
+    "5. [Loading Dataset](#loadingdata)\n",
+    "\n",
+    "6. [Data Types and Structure](#datatype)\n",
+    "\n",
+    "7. [Exploratory Data Analysis](#exploratory)\n",
+    "\n",
+    "   7.1  [Data Cleaning and preprocessing](#datacleaning)\n",
+    "  \n",
+    "      -7.1.1  [Data Type conversion](#conversion)\n",
+    "\n",
+    "      -7.1.2 [Checking for Null Values](#null)\n",
+    "\n",
+    "      -7.1.3 [Checking for Duplicates](#duplicates)\n",
+    "\n",
+    "      -7.1.4 [Checking for Outliers](#outlier)\n",
+    "\n",
+    "      -7.1.5 [Checking consistency in Categorical Columns](#consistency)\n",
+    "\n",
+    "      -7.1.6 [Summary Statistics](#summarystats)\n",
+    "\n"
    ]
   },
   {
@@ -80,6 +105,7 @@
    "id": "f8ab38d1-9ef7-44a1-8b11-245d69b74b86",
    "metadata": {},
    "source": [
+    "<a id='summary'></a>\n",
     "# Dataset Summary\n",
     "\n",
     "The dataset contains global renewable energy adoption and usage details of 6 Regions spanning the years **2020** to **2024**, spread across 12 Columns with 1000 observations. It provides data to identify trends of **Renewable Energy Sources** such as **Solar, Wind, Hydro, Biomass and Geothermal** being utilized in **residential settings**. The dataset includes below listed variables/columns:  \n",
@@ -102,6 +128,7 @@
    "id": "ba484faa-312f-4d89-8969-0a7dc73cf947",
    "metadata": {},
    "source": [
+    "<a id='libraries'></a>\n",
     "# Importing necessary Libraries"
    ]
   },
@@ -2977,7 +3004,7 @@
    "metadata": {},
    "source": [
     "<a id='subsidyinregion'></a>\n",
-    "## Subsidies Distribution per Region"
+    "## Subsidy Distribution per Region"
    ]
   },
   {
