--- a/Renewable_Energy_Analysis.ipynb
+++ b/Renewable_Energy_Analysis.ipynb
@@ -1,34 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "cfa8d5c7-a0fb-4862-b2cb-8f1f2c1f42dc",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>h1, h2, h3, h4, h5, h6 {color: #003366;font-weight: bold!important}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from IPython.display import display, HTML\n",
-    "display(HTML('<style>h1, h2, h3, h4, h5, h6 {color: #003366;font-weight: bold!important}</style>'))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3d471d9b-11ce-46d1-bb27-0a2376f77edb",
    "metadata": {},
@@ -38,22 +10,95 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a9dc5fe-3b5c-4e14-8123-0a8540ae93d8",
+   "id": "b4af8c43-6660-4c53-b9a5-5d2ca8d93a84",
    "metadata": {},
    "source": [
-    "# Table of Contents\n",
-    "[Business Problem](#test)\n",
+    "# Table of Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e805af1-ff6e-410b-83b8-1bd5aaf15e45",
+   "metadata": {},
+   "source": [
+    "1. [Business Problem](#Business-Problem)\n",
+    "2. [Data Source](#Data-Source)\n",
+    "3. [Dataset Summary](#Dataset-Summary)\n",
+    "4. [Importing necessary Libraries](#Importing-necessary-Libraries)\n",
+    "5. [Loading dataset](#Loading-Dataset)\n",
+    "   \n",
+    "   5.1. [Data Types and Structure](#Data-Types-and-Structure)\n",
+    "   \n",
+    "6. [Exploratory Data Analysis ](#Exploratory-Data-Analysis)\n",
     "\n",
-    "[Data Source](#datasource)\n"
+    "   6.1 [Data Cleaning and preprocessing](#Data-Cleaning-and-preprocessing)\n",
+    "\n",
+    "      6.1.1  [Data Type conversion](#Data-Type-conversion)\n",
+    "\n",
+    "      6.1.2  [Checking for Null Values](#Checking-for-Null-Values)\n",
+    "\n",
+    "      6.1.3  [Checking for Duplicates](#Checking-for-Duplicates)\n",
+    "\n",
+    "      6.1.4  [Checking for Duplicates](#Checking-for-Duplicates)\n",
+    "\n",
+    "      6.1.5  [Checking for outliers](#Checking-for-Outliers)\n",
+    "\n",
+    "      6.1.6  [Checking consistency in categorical Columns](#Checking-consistency-in-Categorical-Columns)\n",
+    "\n",
+    "      6.1.7  [Summary Statistics](#Summary-Statistics)\n",
+    "\n",
+    "   6.2  [Renewable Energy Adoption Over Time](#Renewable-Energy-Adoption-Over-Time)\n",
+    "\n",
+    "      6.2.1  [Visualization-Adoption Over Time](#Visualization-Adoption-Over-Time)\n",
+    "\n",
+    "   6.3  [Adoption per Energy Source](#Adoption-per-Energy-Source)\n",
+    "\n",
+    "      6.3.1  [Visualization-Adoption per Energy Source](#Visualization-Adoption-per-Energy-Source)\n",
+    "\n",
+    "   6.4  [Adoption Trend per Energy Source Over Time](#Adoption-Trend-per-Energy-Source-Over-Time)\n",
+    "\n",
+    "      6.4.1  [Visualization of Trend per Energy Source Over Time](#Visualization-of-Trend-per-Energy-Source-Over-Time)\n",
+    "\n",
+    "      6.4.2  [Adoptions per Energy Source-Tabular View](#Adoptions-per-Energy-Source-Tabular-View)\n",
+    "\n",
+    "   6.5  [Adoption per Region](#Adoption-per-Region)\n",
+    "\n",
+    "      6.5.1  [visualization of Adoption per Region](#Visualization-of-Adoption-per-Region)\n",
+    "\n",
+    "   6.6  [Adoption per Country](#Adoption-per-Country)\n",
+    "\n",
+    "      6.6.1  [Visualization of Adoption per Country](#Visualization-of-Adoption-per-Country)\n",
+    "\n",
+    "    6.7  [Energy Sources per region](#Energy-Sources-per-Region)\n",
+    "\n",
+    "      6.7.1  [Visualization of Energy Sources per Region](#Visualization-of-Energy-Sources-per-Region)\n",
+    "\n",
+    "   6.8  [Energy Consumption per Source](#Energy-Consumption-per-Source)\n",
+    "\n",
+    "      6.8.1  [Visualization of Consumption per Source](#Visualization-of-Consumption-per-Source)\n",
+    "\n",
+    "   6.9  [Exploring the Relationship between Household Size and Energy Consumption](#Exploring-the-Relationship-between-Household-Size-and-Energy-Consumption)\n",
+    "\n",
+    "      6.9.1  [Visualization using Scatterplot](#Visualization-Using-Scatterplot)\n",
+    "\n",
+    "   6.10  [Renewable Energy Adoptions-Rural Vs Urban](#Renewable-Energy-Adoptions-Rural-Vs-Urban)\n",
+    "\n",
+    "   6.11  [Renewable Energy Adoption per Income Class](#Renewable-Energy-Adoption-per-Income-Class)\n",
+    "\n",
+    "   6.12  [Impact of Subsidy in Adoption](#Impact-of-Subsidy-in-Adoption)\n",
+    "\n",
+    "   6.13  [Subsidy Distribution per Region](#Subsidy-Distribution-per-Region)\n",
+    "\n",
+    "      6.13.1  [Visualization of Subsidy Distribution across Regions](#Visualization-of-Subsidy-Distribution-Across-Regions)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "5d0e06be-a18f-4edc-b8eb-d478a505c785",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "<a id='test'></a>\n",
-    "\n",
     "# Business Problem \n",
     "\n",
     "Energy Crisis is a critical issue the world is facing, driven by increase in demand, geo-political problems and depletion of fossil fuels. Transitioning to Renewable Energy Sources is the key focus of governments worldwide to resolve energy crisis and ensure sustainability. In this case-study I am exploring the usage of global renewable energy sources - Solar, Wind, Hydro, Biomass and Geothermal."
@@ -66,8 +111,6 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "<a id='datasource'></a>\n",
-    "\n",
     "# Data Source\n",
     "\n",
     "The dataset is taken from **Kaggle**.\n",
@@ -80,6 +123,7 @@
    "id": "f8ab38d1-9ef7-44a1-8b11-245d69b74b86",
    "metadata": {},
    "source": [
+    "<a id='summary'></a>\n",
     "# Dataset Summary\n",
     "\n",
     "The dataset contains global renewable energy adoption and usage details of 6 Regions spanning the years **2020** to **2024**, spread across 12 Columns with 1000 observations. It provides data to identify trends of **Renewable Energy Sources** such as **Solar, Wind, Hydro, Biomass and Geothermal** being utilized in **residential settings**. The dataset includes below listed variables/columns:  \n",
@@ -102,6 +146,7 @@
    "id": "ba484faa-312f-4d89-8969-0a7dc73cf947",
    "metadata": {},
    "source": [
+    "<a id='libraries'></a>\n",
     "# Importing necessary Libraries"
    ]
   },
@@ -2977,7 +3022,7 @@
    "metadata": {},
    "source": [
     "<a id='subsidyinregion'></a>\n",
-    "## Subsidies Distribution per Region"
+    "## Subsidy Distribution per Region"
    ]
   },
   {
